testing for alignment issue of Captcha

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'poppins';
-  background-color: black;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.cf-turnstile{
+  background-color: black;
+  margin: 2rem auto;
+  max-width: 300px;
 }
